# roger

./: .gitignore  CMakeLists.txt  OCLBPC.cpp  OCLBPC.h  OCLBasic.cpp  OCLBasic.h  OCLDWT.cpp  OCLDWT.h  OCLDWTForward.cpp  OCLDWTForward.h  OCLDWTRev.cpp  OCLDWTRev.h  OCLDataManager.cpp  OCLDataManager.h  OCLDataTransferManager.cpp  OCLDataTransferManager.h  OCLDecoder.cpp  OCLDecoder.h  OCLDeviceManager.cpp  OCLDeviceManager.h  OCLEncodeDecode.cpp  OCLEncodeDecode.h  OCLEncoder.cpp  OCLEncoder.h  OCLKernel.cpp  OCLKernel.h  OCLMemoryManager.cpp  OCLMemoryManager.h  OCLQueue.cpp  OCLQueue.h  OCLRGBtoPlanar.cpp  OCLRGBtoPlanar.h  OCLTest.cpp  OCLTest.h  OCLUtil.cpp  OCLUtil.h  README.md  Roger.sln  Roger.vcxproj  Roger.vcxproj.filters  (+9 more)
Roger/: OCLBasic.cpp  OCLBasic.h  OCLDWTForward.cpp  OCLDataTransferManager.h  OCLKernel.cpp  OCLQueue.h  OCLUtil.h  Roger.sln  Roger.vcxproj  Roger.vcxproj.filters  concurrent_queue.h  ocl_platform.h  oclbpc.cl  ocldwt97.cl
cmake/: FindOpenCL.cmake  FindOpenCV.cmake
cmake/opencl/: cl.hpp
src/: CMakeLists.txt  OCLBPC.cpp  OCLBPC.h  OCLBasic.cpp  OCLBasic.h  OCLDWT.cpp  OCLDWT.h  OCLDWTForward.cpp  OCLDWTForward.h  OCLDWTRev.cpp  OCLDWTRev.h  OCLDataTransferManager.cpp  OCLDataTransferManager.h  OCLDecoder.cpp  OCLDecoder.h  OCLDeviceManager.cpp  OCLDeviceManager.h  OCLEncodeDecode.cpp  OCLEncodeDecode.h  OCLEncoder.cpp  OCLEncoder.h  OCLKernel.cpp  OCLKernel.h  OCLMemoryManager.cpp  OCLMemoryManager.h  OCLQueue.cpp  OCLQueue.h  OCLRGBtoPlanar.cpp  OCLRGBtoPlanar.h  OCLTest.cpp  OCLTest.h  OCLUtil.cpp  OCLUtil.h  concurrent_queue.h  main.cpp  ocl_platform.h
src/CL/: oclbpc.cl  ocldwt53.cl  ocldwt97rev.cl  oclplanar.cl
